Fix: responsive overflow issue, h1 fontsize

--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
   font-family: "Poppins", sans-serif;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
+
 /* header ===== */
 header {
   z-index: 999;
@@ -98,7 +103,7 @@ section {
 }
 
 .home .content h1 {
-  font-size: 4em;
+  font-size: calc(1.5em + 3vw);
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 5px;
@@ -154,7 +159,7 @@ section {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   object-fit: cover;
 }
 
@@ -253,6 +258,8 @@ section {
     border-radius: 5px;
     box-shadow: 0 5px 25px rgb(1 1 1 / 20%);
   }
+
+
 
   .menu-btn {
     background: url(menu.png) no-repeat;
